yamls/deployment-secret-env.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-task-deployment-secret-vol-env
  namespace: asd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-task-secret-vol
  template:
    metadata:
      labels:
        app: first-task-secret-vol
    spec:
      containers:
      - name: my-task-container-secret-vol
        image: dhirwanashish/my-task-image
        #imagePullPolicy: IfNotPresent

#####two ways to check credentials... 1) with volume  2) with env

      #  volumeMounts:
      #  - name: vol-mount
      #    mountPath: /data/vol  #go inside cont and goto data/vol u will see pass and username (BOTH?? COZ  ITS JUST STORING)
      #volumes:                  # AND ls /data/vol anc cat password,username
      #- name: vol-mount
        #persistentVolumeClaim:    #when i use claim it secret doent work why??
        #  claimName: pvc-task     #Because secret directly mounts on mountPath and mountPath is inside container(major)
      #  secret:                   #volume is for pod (set of containers) hence secret can not be same for all
      #    secretName: credentials
        
        env:                # this way only gives single secret (the last one)
        - name: task-env     #Because it takes in secret in one environment
          valueFrom:         #go inside container and env | grep task-env to see secret 
            secretKeyRef: 
              name: credentials
              key: username
            #  key: password
